fix: put light color on dark mode for result

--- a/src/App.css
+++ b/src/App.css
@@ -108,3 +108,7 @@ body {
   font-size: 1.6rem;
   margin-top: 10px;
 }
+
+.display-result-dark {
+  color: #ccc;
+}
